--- a/src/App.css
+++ b/src/App.css
@@ -1,121 +1,64 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Pacifico');
-
-body {
+* {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
+}
+body {
+    font-family: "Press Start 2P";
+}
+#container {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-areas: "sidebar main";
+    width: 100vw;
+    height: 100vh;
+}
+#main {
+    grid-area: main;
+}
+#new-message {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding: 5px;
+    margin-left: 0px;
+    border-top: 1px solid #3f3f3f;
+}
+#messages-list {
+    padding: 5px 0 0 5px;
+}
+#sidebar {
+    grid-area: sidebar;
+    padding: 5px 0 0 5px;
+    border-right: 1px solid #3f3f3f;
+    height: 100%;
+}
+
+/* new */
+
+#new-message {
+    padding: 0px;
+    height: 50px;
+}
+
+#new-message input {
+    font-family: "Press Start 2P";
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    height: 50px;
+    padding: 5px;
 }
 
 p {
-  margin: 0;
-  display: inline-block;
+    width: 300px;
+    background-color: yellow;
 }
 
-.App {
-  background-color: #1EE494;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.left {
+    color: red;
 }
 
-.chatroom {
-  width: 360px;
-  height: 600px;
-  background-color: rgba(0,0,0, .7);
-  border-radius: 5px;
-  overflow: hidden;
-  box-shadow: 0 0 8px 0 rgba(0,0,0, 0.3);
-}
-
-.chatroom h3 {
-  font-family: 'Pacifico', cursive;
-  background-color: rgba(30, 228, 148, 0.7);
-  color: #FFF;
-  margin: 0;
-  height: 40px;
-  font-size: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.chatroom .chats {
-  box-sizing: border-box;
-  padding: 0 20px;
-  margin: 10px 0 0;
-  height: 510px;
-  overflow-y: scroll;
-}
-
-.chatroom .chats .chat {
-  background: rgba(255, 255, 255, 0.8);
-  position: relative;
-  padding: 5px 13px;
-  font-size: 14px;
-  border-radius: 10px;
-  list-style: none;
-  float: left;
-  clear: both;
-  margin: 10px 0;
-  max-width: 200px;
-}
-
-.chatroom .chats .chat img {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  position: absolute;
-  top: -10px;
-  left: 0px;
-}
-
-.chatroom .chats .chat.right {
-  float: right;
-  clear: both;
-}
-
-.chatroom .chats .chat a {
-  text-decoration: none;
-  color:#3498DB;
-}
-
-.chatroom .input {
-  height: 40px;
-  width: 100%;
-  background: rgba(30, 228, 148, 0.7);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.chatroom .input input[type="text"] {
-  background: rgba(255, 255, 255, 0.5);
-  outline: 0;
-  border: 2px solid #1EE494;
-  padding: 0 5px;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  margin-left: 10px;
-  height: 30px;
-  width: 270px;
-  box-sizing: border-box;
-  font-size: 14px;
-}
-
-.chatroom .input input[type="submit"] {
-  background: transparent;
-  border: 1px solid #1EE494;
-  height: 30px;
-  width: 70px;
-  font-size: 14px;
-  box-sizing: border-box;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-
-.chatroom .input input[type="submit"]:hover {
-  background: #1EE494;
-  color: #FFF;
+.right {
+    color: blue;
 }
