--- a/src/App.css
+++ b/src/App.css
@@ -3,56 +3,52 @@
   padding: 0;
   margin: 0;
 }
-body {
-    font-family: "Press Start 2P";
-}
-#container {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-areas: "sidebar main";
-    width: 100vw;
-    height: 100vh;
-}
-#main {
-    grid-area: main;
-}
-#new-message {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    padding: 5px;
-    margin-left: 0px;
-    border-top: 1px solid #3f3f3f;
-}
-#messages-list {
-    padding: 5px 0 0 5px;
-}
 
-/* new */
-
-#new-message {
-    padding: 0px;
-    height: 50px;
-}
-
-#new-message input {
-    font-family: "Press Start 2P";
-    width: 100%;
-    height: 100%;
+ul{
+    list-style: none;
     margin: 0;
-    height: 50px;
-    padding: 5px;
+    padding: 0;   
 }
 
-p {
-    width: 300px;
-    background-color: yellow;
+.cf:before,
+.cf:after {
+  content: " "; /* 1 */
+  display: table; /* 2 */
 }
 
-.left {
-    color: red;
+.cf:after {
+  clear: both;
 }
 
-.right {
-    color: blue;
-}
+ul li{
+    display:inline-block;
+    clear: both;
+    padding: 20px;
+    border-radius: 30px;
+    margin-bottom: 2px;
+    font-family: Helvetica, Arial, sans-serif;
+  }
+  
+  .him{
+    background: #eee;
+    float: right;
+  }
+  
+  .me{
+    float: left;
+    background: #1d9e0c;
+    color: #fff;
+  }
+  
+  .him + .me{
+    border-bottom-right-radius: 5px;
+  }
+  
+  .me + .me{
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+  }
+  
+  .me:last-of-type {
+    border-bottom-right-radius: 30px;
+  }
