--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,14 @@
   padding: 0;
   margin: 0;
 }
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px
+}
 
-ul{
+ul {
     list-style: none;
     margin: 0;
     padding: 0;   
